2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/getopt.c: Replaced inclusion of includes.h
	by config.h which appears sufficient.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/getopt.h: Moved to libopenvas/

	* libopenvas/getopt.h: New. Previous include/getopt.h.

	* libopenvas/getopt1.c: Removed includes.h and adapted
	according to move of getopt.h

	* MANIFEST: Updated.

	* Makefile: Reflected location change of getopt.h.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/ids_send.c: Removed inclusion of includes.h
	and added FIX() definition from there.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/hlst.c: replace inlusion of "includes.h" by
	respective single includes.

2008-03-24  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Made openvas-libraries compile after a "make clean".

	* include/libopenvas.h: Moved various defines to
	libopenvas/ids_send.h.

	* libopenvas/ids_send.h: Added some defines moved
	from libopenvas.h.

	* libopenvas/plugutils.c: Added missing include.

	* libopenvas/network.c: replace inlusion of "includes.h" by
	respective single includes.

	* libopenvas/ids_send.c: replace inlusion of "includes.h" by
	respective single includes except that includes.h
	remains were it is for a missing define ("FIX()").
	Removed ExtFunc.

	* libopenvas/ftp_funcs.h: Added missing include.

	* TODO: Removed resolved entry.

2008-03-24  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Cleanup for module store.

	* libopenvas/store.c: replace inlusion of "includes.h" by
	respective single includes. Replaced PATH_MAX by MAXPATHLEN.

	* libopenvas/store.h: New. Contains declarations
	for module "store" (extracted from libopenvas.h)

	* include/libopenvas.h: Removed declarations for store
	and replaced by include of store.h.

	* Makefile: Install libopenvas/store.h.

	* MANIFEST: Updated.
