@@ -36,10 +36,12 @@
 #include "ftp_funcs.h"
 #include "kb.h"
 #include "network.h"
+#include "pcap_openvas.h"
+#include "plugutils.h"
 #include "popen.h"
 #include "proctitle.h"
 #include "rand.h"
-#include "resolv.h"
+#include "resolve.h"
 #include "scanners_utils.h"
 #include "services1.h"
 #include "share_fd.h"
